--- a/src/app/features/gis/components/claim/components/document-management/document-management.component.html
+++ b/src/app/features/gis/components/claim/components/document-management/document-management.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="card">
+  <div class="container">
  
   
     <button class="btn btn-primary mb-2 mt-3" (click)="addDocument()">Add Document</button>
@@ -145,3 +146,4 @@
   
     <button class="btn btn-primary mb-2 mt-3" data-bs-toggle="modal" data-bs-target="#uploadDocumentModal">Upload Document</button>
   </div>
+</div>
