--- a/src/app/features/gis/components/policy/components/client-dd-details/client-dd-details.component.html
+++ b/src/app/features/gis/components/policy/components/client-dd-details/client-dd-details.component.html
@@ -6,83 +6,93 @@
 
             </div>
             <div class="col-sm-8 d-flex justify-content-end">
-                <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editModal">
+                <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="modal"
+                    data-bs-target="#editModal">
                     <i class="fa-solid fa-pencil"></i>
                 </button>
 
-              
+
 
             </div>
         </div>
     </div>
     <!-- EDIT CLIENT DD DETAILS MODAL -->
-<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-       
-            
-            <div class="modal-body">
-                <button type="button" class="btn-close float-end" data-bs-dismiss="modal" aria-label="Close"></button>
-                <h5 class="modal-title" id="modalTitle">Edit Client DD Details</h5>
-                
-                <!-- ROW 1 -->
-                <div class="row mt-4 mb-4">
-                    <div class="col-sm-6">
-                        <label for="clientName" class="form-label">Client Name</label>
-                        <input type="text" class="form-control" id="clientName" placeholder="">
-                    </div>
-                    <div class="col-sm-6">
-                        <label for="clientName" class="form-label">Account Name</label>
-                        <input type="text" class="form-control" id="clientName" placeholder="">
-                    </div>
-                </div>
-                <!-- ROW 2 --> 
-                <div class="row">
-                    <div class="col-sm-6">
-                        <label for="clientName" class="form-label">Account No.</label>
-                        <input type="text" class="form-control" id="clientName" placeholder="">
-                    </div>
-                    <div class="col-sm-6">
-                        <label for="clientName" class="form-label">Bank Branch</label>
-                        <p-dropdown formControlName="branchCode" [options]="branchList" optionLabel="name"
-                        optionValue="id" (onChange)="onBranchSelected($event.value)"
-                         [filterBy]="'description'" [filter]="true"
-                        ></p-dropdown>
-                    </div>
+    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+
+
+                <div class="modal-body">
+                    <button type="button" class="btn-close float-end" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                    <h5 class="modal-title" id="modalTitle">Edit Client DD Details</h5>
+                    <form [formGroup]="clientDDDetailsForm">
+                        <!-- ROW 1 -->
+                        <div class="row mt-4 mb-4">
+                            <div class="col-sm-6">
+                                <label for="clientName" class="form-label">Client Name</label>
+                                <input type="text" class="form-control" id="clientName" placeholder="" formControlName="clientCode">
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="clientName" class="form-label">Account Name</label>
+                                <input type="text" class="form-control" id="clientName" placeholder="" formControlName="accountName">
+                            </div>
+                        </div>
+                        <!-- ROW 2 -->
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label for="clientName" class="form-label">Account No.</label>
+                                <input type="text" class="form-control" id="clientName" placeholder="" formControlName="accountNo">
+                            </div>
+                            <div class="col-sm-6">
+                                <label for="clientName" class="form-label">Bank Branch</label>
+                                <p-dropdown formControlName="branchCode" [options]="branchList" optionLabel="name"
+                                    optionValue="id" (onChange)="onBranchSelected($event.value)"
+                                    [filterBy]="'description'" [filter]="true" formControlName="bankBranchCode"></p-dropdown>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
-        </div>
-         
-    </div>
-</div>
-   
-      
-    <p-table 
-    [value]=" " 
-    selectionMode="single" 
 
-  
-    [tableStyle]="{ 'min-width': '50rem' , 'min-height':'50rem'}">
+        </div>
+    </div>
+
+
+
+    <p-table #dt1 [value]="clientDDList" dataKey="code" editMode="row" selectionMode="single"
+        [(selection)]="selectedClientDD" [tableStyle]="{'min-width': '50rem'}" styleClass="p-datatable-sm"
+        responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true">
+
+
         <ng-template pTemplate="header">
             <tr>
-                <th>Client ID</th>
-                <th>Name</th>
-                <th>Id No.</th>
-                <th>Pin No.</th>
-                <th>Account Name</th>
-                <th>Account No.</th>
-                <th>Branch</th>
+                <th class="flexible-header">Client ID</th>
+                <th class="flexible-header">Name</th>
+                <th class="flexible-header">Id No.</th>
+                <th class="flexible-header">Pin No.</th>
+                <th class="flexible-header">Account Name</th>
+                <th class="flexible-header">Account No.</th>
+                <th class="flexible-header">Branch</th>
+
             </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-product>
-            <tr [pSelectableRow]="product">
-                <td>{{ product.code }}</td>
-                <td>{{ product.name }}</td>
-                <td>{{ product.category }}</td>
-                <td>{{ product.quantity }}</td>
+
+        <ng-template pTemplate="body" let-clientDDList let-ri="rowIndex">
+            <tr [pSelectableRow]="clientDDList" [class.p-highlight]="clientDDList === selectedClientDD"
+                (click)="OnSelectClientDD(selectedClientDD)">
+                <td>{{ clientDDList.clientCode }}</td>
+                <td>{{ clientDDList.clientOtherNames }}</td>
+                <td>{{ clientDDList.clientIdRegNo }}</td>
+                <td>{{ clientDDList.clientPin }}</td>
+                <td>{{ clientDDList.clientDdAccountName }}</td>
+                <td>{{ clientDDList.clientDdAccountNo }}</td>
+                <td>{{ clientDDList.branchName }}</td>
+
+
             </tr>
         </ng-template>
-</p-table>
+    </p-table>
 </div>
 <div class="d-flex justify-content-end">
     <button type="button" class="btn btn-outline-primary me-2">{{'gis.policy.reassign' | translate}}</button>
