--- a/src/app/features/gis/components/policy/components/policy-subclasess-clauses/policy-subclasess-clauses.component.html
+++ b/src/app/features/gis/components/policy/components/policy-subclasess-clauses/policy-subclasess-clauses.component.html
@@ -151,7 +151,7 @@
                         <p class="modalTitle" id="selectClient">
                             Select a clause
                         </p>
-                        <p-table #dt1 [value]="productClauseList" [tableStyle]="{'max-width': '465px'}"
+                        <p-table #dt1 [value]="policySubclassClauses" [tableStyle]="{'max-width': '465px'}"
                             [(selection)]="selectedPolicyClause" [resizableColumns]="true" styleClass="p-datatable-sm"
                             responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true" [paginator]="true"
                             [rows]="5" [scrollable]="true" scrollDirection="horizontal" [showCurrentPageReport]="true"
@@ -171,15 +171,15 @@
                             </ng-template>
 
 
-                            <ng-template pTemplate="body" let-productClauseList>
+                            <ng-template pTemplate="body" let-policySubclassClauses>
                                 <tr>
 
                                     <td>
-                                        <p-tableCheckbox [value]="productClauseList" />
+                                        <p-tableCheckbox [value]="policySubclassClauses" />
                                     </td>
-                                    <td>{{productClauseList.shortDescription}} </td>
-                                    <td>{{productClauseList.heading}}</td>
-                                    <td></td>
+                                    <td>{{policySubclassClauses.shortDescription}} </td>
+                                    <td>{{policySubclassClauses.heading}}</td>
+                                    <td>{{policySubclassClauses.subclassDesc}}</td>
                                 </tr>
                             </ng-template>
 
@@ -234,7 +234,7 @@
 
 
                     <div class="d-flex justify-content-end mt-4 mb-4">
-                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="editPolicySubclassClause()">{{'crm.save_details' |
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" >{{'crm.save_details' |
                             translate}}</button>
                             <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cancel</button>
                     </div>
