--- a/src/app/features/gis/components/policy/components/policy-subclasess-clauses/policy-subclasess-clauses.component.css
+++ b/src/app/features/gis/components/policy/components/policy-subclasess-clauses/policy-subclasess-clauses.component.css
@@ -34,3 +34,12 @@
     color: #00529B;
 
 }
+.deleteMessage {
+    color: #000;
+    font-size: 16px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-align: center;
+}
