VQ-3203:DESIGN IMPLEMENTATION FOR EXTERNAL CLAIM EXPERIENCE SECTION

--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -3833,8 +3833,7 @@
                     <p>Details about Limits of liability...</p>
                 </ng-container>
                 <ng-container *ngIf="selectedItem === 9">
-                    <h5> {{'gis.policy.external_claim_exp' | translate}}..</h5>
-                    <p>Details about External claims exp...</p>
+                   <app-external-claims></app-external-claims>
                 </ng-container>
                 <ng-container *ngIf="selectedItem === 10">
                     <h5>{{'gis.policy.internal_claim_exp' | translate}}..</h5>
